resolvi el error a la conexion

--- a/index.html
+++ b/index.html
@@ -1325,14 +1325,14 @@ AC01,3,0,5,0,0,0,126,18,4,3,0,3,3,0,0,0,0,6,8,0,0,28/07/2025</pre
           return;
         }
 
-        // Initialize Firebase (this would be the actual Firebase config)
+        // Initialize Firebase
         const firebaseConfig = {
-          apiKey: AIzaSyCQD8cR0CDAEXKvcQLHFocUVjMDLsTfvP0,
-          authDomain: control - de - materiales - aa944.firebaseapp.com,
-          projectId: control - de - materiales - aa944,
-          storageBucket: `control-de-materiales-aa944.firebasestorage.app`,
-          messagingSenderId: "351278560249",
-          appId: "1:351278560249:web:cb480b35a1919fa1ca0328",
+          apiKey: apiKey,
+          authDomain: authDomain,
+          projectId: projectId,
+          storageBucket: `${projectId}.appspot.com`,
+          messagingSenderId: "123456789",
+          appId: "1:123456789:web:abcdef123456789",
         };
 
         try {
