cambie la funcion de borrar

--- a/index.html
+++ b/index.html
@@ -1039,17 +1039,14 @@ AC01,3,0,5,0,0,0,126,18,4,3,0,3,3,3,0,0,0,6,8,0,0,28/07/2025</pre
           }
       }
 
-      // Delete record
-  function deleteRecord(id) {
+// Delete record
+function deleteRecord(id) {
     if (confirm('¿Estás seguro de que quieres eliminar este registro?')) {
-        // Eliminar de Firestore
+        // Eliminar de Firestore usando el ID real del documento
         materialesCollection.doc(id).delete()
             .then(() => {
-                // Solo después de eliminar en Firestore, actualiza el array local
-                materialesData = materialesData.filter(item => item.id !== id);
-                updateDashboard();
-                updateCharts();
                 showMessage('Registro eliminado exitosamente', 'success');
+                // No necesitas actualizar manualmente materialesData, el onSnapshot lo hará automáticamente
             })
             .catch(error => {
                 console.error("Error al eliminar el registro: ", error);
