--- a/index.html
+++ b/index.html
@@ -1336,15 +1336,15 @@ AC01,3,0,5,0,0,0,126,18,4,3,0,3,3,3,0,0,0,6,8,0,0,28/07/2025</pre
           "CONECTOR UPC",
           "DIVISOR 1 X 16",
           "DIVISOR 1 X 8",
-          "FIBRA DROP 1F (Mts)",
+          "FIBRA DROP 1F",
           "GRAPAS",
-          "MANGUITO TERMICO",
+          "M.TERMICO",
           "ONU GPON",
-          "PATCH CORD UPC-UPC",
-          "PC-3M-SC-UPC-SC-APC-205",
+          "PATCH UPC-UPC",
+          "PC-3M-SC-UPC",
           "ROSETA",
           "SERVILLETAS",
-          "CINTA DOBLE FACE",
+          "CINTA D.F",
           "TEIPE",
           "TIRRO",
           "TIRRAJE Grande",
@@ -1401,20 +1401,20 @@ AC01,3,0,5,0,0,0,126,18,4,3,0,3,3,3,0,0,0,6,8,0,0,28/07/2025</pre
                   return sum + (item.divisor1x16 || 0);
                 if (material === "DIVISOR 1 X 8")
                   return sum + (item.divisor1x8 || 0);
-                if (material === "FIBRA DROP 1F (Mts)")
+                if (material === "FIBRA DROP 1F")
                   return sum + (item.fibraDrop1F || 0);
                 if (material === "GRAPAS") return sum + (item.grapas || 0);
-                if (material === "MANGUITO TERMICO")
+                if (material === "M.TERMICO")
                   return sum + (item.termos || 0);
                 if (material === "ONU GPON") return sum + (item.onu || 0);
-                if (material === "PATCH CORD UPC-UPC")
+                if (material === "PATCH UPC-UPC")
                   return sum + (item.ptcAA || 0);
-                if (material === "PC-3M-SC-UPC-SC-APC-205")
+                if (material === "PC-3M-SC-UPC")
                   return sum + (item.ptcVA || 0);
                 if (material === "ROSETA") return sum + (item.roseta || 0);
                 if (material === "SERVILLETAS")
                   return sum + (item.servilletas || 0);
-                if (material === "CINTA DOBLE FACE")
+                if (material === "CINTA D.F")
                   return sum + (item.cintaDobleFace || 0);
                 if (material === "TEIPE") return sum + (item.teipe || 0);
                 if (material === "TIRRO") return sum + (item.tirro || 0);
